[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-one"
path = "src/day-one/main.rs"

[[bin]]
name = "day-two"
path = "src/day-two/main.rs"

[[bin]]
name = "day-three"
path = "src/day-three/main.rs"

[[bin]]
name = "day-four"
path = "src/day-four/main.rs"

[dependencies]
