[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day_one"

[[bin]]
name = "day_two"

[[bin]]
name = "day_three"

[[bin]]
name = "day_four"

[[bench]]
name = "day_four"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies]
